--- a/UnitTests/PInvoke/BITS/BITS.csproj
+++ b/UnitTests/PInvoke/BITS/BITS.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{7D799541-C923-4593-A8C0-ABFA4F44AD3F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BITS</RootNamespace>
-    <AssemblyName>BITS</AssemblyName>
+    <RootNamespace>Vanara.PInvoke.Tests</RootNamespace>
+    <AssemblyName>UnitTest.PInvoke.BITS</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
