--- a/UnitTests/PInvoke/Cabinet/Cabinet.csproj
+++ b/UnitTests/PInvoke/Cabinet/Cabinet.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{7A7D9AC3-B371-478B-95B3-B538CB903231}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Cabinet</RootNamespace>
-    <AssemblyName>Cabinet</AssemblyName>
+    <RootNamespace>Vanara.PInvoke.Tests</RootNamespace>
+    <AssemblyName>UnitTest.PInvoke.Cabinet</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
