--- a/UnitTests/PInvoke/NTDSApi/NTDSApi.csproj
+++ b/UnitTests/PInvoke/NTDSApi/NTDSApi.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{D7E06BE2-1BAC-4016-8228-FAA091ED4831}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NTDSApi</RootNamespace>
-    <AssemblyName>NTDSApi</AssemblyName>
+    <RootNamespace>Vanara.PInvoke.Tests</RootNamespace>
+    <AssemblyName>UnitTest.PInvoke.NTDSApi</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.DirectoryServices" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NTDSApiTests.cs" />
@@ -42,6 +44,24 @@
     <PackageReference Include="NUnit3TestAdapter">
       <Version>3.13.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Vanara.Core.csproj">
+      <Project>{241f73ee-9298-45c9-b869-a045dff94c03}</Project>
+      <Name>Vanara.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\NetApi32\Vanara.PInvoke.NetApi32.csproj">
+      <Project>{48ed1b1b-1450-43d2-917e-b5ace357fd82}</Project>
+      <Name>Vanara.PInvoke.NetApi32</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\NTDSApi\Vanara.PInvoke.NTDSApi.csproj">
+      <Project>{ff26f707-5f0e-461b-bcc9-013724f87bd4}</Project>
+      <Name>Vanara.PInvoke.NTDSApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj">
+      <Project>{a5e519e9-feba-4fe3-93a5-b8269bef72f4}</Project>
+      <Name>Vanara.PInvoke.Shared</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
