--- a/UnitTests/PInvoke/ShlwApi/ShlwApi.csproj
+++ b/UnitTests/PInvoke/ShlwApi/ShlwApi.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{AF867D8E-1C94-4D4C-962D-D155581B0C3B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ShlwApi</RootNamespace>
-    <AssemblyName>ShlwApi</AssemblyName>
+    <RootNamespace>Vanara.PInvoke.Tests</RootNamespace>
+    <AssemblyName>UnitTest.PInvoke.ShlwApi</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+<LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
