--- a/UnitTests/PInvoke/UxTheme/UxTheme.csproj
+++ b/UnitTests/PInvoke/UxTheme/UxTheme.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{EFAFBD16-A9FB-4656-896D-AD434B778EF0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UxTheme</RootNamespace>
-    <AssemblyName>UxTheme</AssemblyName>
+    <RootNamespace>Vanara.PInvoke.Tests</RootNamespace>
+    <AssemblyName>UnitTest.PInvoke.UxTheme</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,6 +32,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
@@ -42,6 +45,36 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UxThemeTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\Vanara.Core.csproj">
+      <Project>{241f73ee-9298-45c9-b869-a045dff94c03}</Project>
+      <Name>Vanara.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\Gdi32\Vanara.PInvoke.Gdi32.csproj">
+      <Project>{E186AFF0-BC70-4776-8BEE-9FDAE108F4EB}</Project>
+      <Name>Vanara.PInvoke.Gdi32</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\Kernel32\Vanara.PInvoke.Kernel32.csproj">
+      <Project>{842d436f-598c-47d7-b5aa-12399f8ccfe9}</Project>
+      <Name>Vanara.PInvoke.Kernel32</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj">
+      <Project>{a5e519e9-feba-4fe3-93a5-b8269bef72f4}</Project>
+      <Name>Vanara.PInvoke.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\User32.Gdi\Vanara.PInvoke.User32.Gdi.csproj">
+      <Project>{fc7b25b5-3bb9-44f5-93d9-9ab7193b1be9}</Project>
+      <Name>Vanara.PInvoke.User32.Gdi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\User32\Vanara.PInvoke.User32.csproj">
+      <Project>{a6771907-addc-49fc-8444-a97aa65e77e2}</Project>
+      <Name>Vanara.PInvoke.User32</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\PInvoke\UxTheme\Vanara.PInvoke.UxTheme.csproj">
+      <Project>{f73a658b-d900-4d9b-ba8e-19e6dfdc6147}</Project>
+      <Name>Vanara.PInvoke.UxTheme</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
