--- a/UnitTests/Windows.Shell/Windows.Shell.csproj
+++ b/UnitTests/Windows.Shell/Windows.Shell.csproj
@@ -7,10 +7,11 @@
     <ProjectGuid>{2616C074-DF6C-47D4-BE82-6768885ACAC9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Windows.Shell</RootNamespace>
-    <AssemblyName>Windows.Shell</AssemblyName>
+    <RootNamespace>Vanara.Windows.Shell.Tests</RootNamespace>
+    <AssemblyName>UnitTest.Windows.Shell</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,9 +32,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="TestClass.cs" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="NUnit">
@@ -42,6 +43,48 @@
     <PackageReference Include="NUnit3TestAdapter">
       <Version>3.13.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="ControlPanelTests.cs" />
+    <Compile Include="ShellAssocTests.cs" />
+    <Compile Include="ShellFileOperationsTests.cs" />
+    <Compile Include="ShellFolderTests.cs" />
+    <Compile Include="ShellItemPropStoreTests.cs" />
+    <Compile Include="ShellItemTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Vanara.Core.csproj">
+      <Project>{241f73ee-9298-45c9-b869-a045dff94c03}</Project>
+      <Name>Vanara.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\ComCtl32\Vanara.PInvoke.ComCtl32.csproj">
+      <Project>{291af9b0-51e8-4e4a-972b-77310a7a0c06}</Project>
+      <Name>Vanara.PInvoke.ComCtl32</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\Ole\Vanara.PInvoke.Ole.csproj">
+      <Project>{bbe4a7d6-0b24-4f58-9726-e05f358c1256}</Project>
+      <Name>Vanara.PInvoke.Ole</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj">
+      <Project>{a5e519e9-feba-4fe3-93a5-b8269bef72f4}</Project>
+      <Name>Vanara.PInvoke.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\Shell32\Vanara.PInvoke.Shell32.csproj">
+      <Project>{3226020f-4c9d-41b3-ac8a-2bc9fd064cd8}</Project>
+      <Name>Vanara.PInvoke.Shell32</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\ShlwApi\Vanara.PInvoke.ShlwApi.csproj">
+      <Project>{30fd6779-6549-449e-880a-695815eb89b0}</Project>
+      <Name>Vanara.PInvoke.ShlwApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\PInvoke\User32.Gdi\Vanara.PInvoke.User32.Gdi.csproj">
+      <Project>{fc7b25b5-3bb9-44f5-93d9-9ab7193b1be9}</Project>
+      <Name>Vanara.PInvoke.User32.Gdi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Windows.Shell\Vanara.Windows.Shell.csproj">
+      <Project>{43685be2-a65e-4b01-be16-479526940f23}</Project>
+      <Name>Vanara.Windows.Shell</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
